# aaw_ws

./: .gitignore  .ycm_extra_conf.py
src/aaw_opencv/: CMakeLists.txt  package.xml
src/aaw_opencv/include/: aaw_move_robot.h  aawcoordtransform.h  aawibvs.h  aawtcpserver.h  aawvertexesgainer.h
src/aaw_opencv/launch/: aaw_find_features_left_cam.launch  aaw_image_processer.launch  aaw_vertexes_tracker.launch  export.launch
src/aaw_opencv/src/: aaw_find_features.cpp  aaw_image_processer.cpp  aaw_move_robot.cpp  aaw_vertexes_tracker.cpp  aawcoordtransform.cpp  aawibvs.cpp  aawtcpserver.cpp  aawvertexesgainer.cpp
src/aaw_opencv/srv/: MoveRobot.srv
src/aaw_ros/: CMakeLists.txt  README.md  package.xml
src/aaw_ros/include/: aaw_LDSDriverServer_Locomotory.h  aaw_LDSDriverServer_Quiescent.h  aaw_motorDriverServer_Side.h  aaw_motorDriverServer_Up.h  aaw_moveRobotServer.h  aaw_originalCtrlVal.h  aaw_visualServo.h  aaw_weightSensorDataReader.h  aawcoordtransform.h  aawibvs.h  aawldsdriver.h  aawserver4motor.h  aawtcpserver.h  aawvertexesgainer.h  aawvertexesgainer2.h
src/aaw_ros/launch/: aaw_getDesiredCoordsOnNP.launch  aaw_visualServo.launch  calibrate_desired_pos.launch  export.launch  main.launch  motorAndSensors.launch  visual_servo.launch
src/aaw_ros/msg/: WeightSensorData.msg
src/aaw_ros/src/: aaw_LDSDriverServer_Locomotory.cpp  aaw_LDSDriverServer_Quiescent.cpp  aaw_getDesiredCoordsOnNP.cpp  aaw_motorDriverServer_Side.cpp  aaw_motorDriverServer_Up.cpp  aaw_moveRobotServer.cpp  aaw_visualServo.cpp  aaw_weightSensorDataReader.cpp  aawcoordtransform.cpp  aawibvs.cpp  aawldsdriver.cpp  aawserver4motor.cpp  aawtcpserver.cpp  aawvertexesgainer.cpp  aawvertexesgainer2.cpp
src/aaw_ros/srv/: BoltMotionCtrl.srv  ChangeRobotStatus.srv  ChangeTimeIntegration.srv  DisableRobot.srv  LDSInteraction.srv  LDSMotionCtrl.srv  MoveRobot.srv  MoveRobot_DistanceZ.srv  UpdateCoordTransformer.srv
src/canbus/: CMakeLists.txt  package.xml
src/canbus/include/: ECanVci.h
src/canbus/src/: can_cmd.cpp
src/canbus/srv/: Creep.srv
src/example_opencv/: CMakeLists.txt  README.md
src/example_opencv/launch/: find_red_pixels_left_cam.launch
src/example_opencv/src/: aaw_image_processer.cpp
src/interaction/: CMakeLists.txt  package.xml
src/interaction/srv/: RestartRobotMotion.srv
src/zed_video_sub_tutorial/src/: zed_video_sub_tutorial.cpp
src/zed_wrapper/launch/: mylaunchfile.launch  zedm.launch
src/zed_wrapper/params/: common.yaml  zedm.yaml
